html/static/css/style.css
/* ... */
.medium-button-red {
  border-color: var(--color-red);
  color: var(--color-red);
}

.medium-button:hover,
.icon-button:hover,
.a-large-button:hover,
.large-button:hover {
  border-color: var(--color-dimgray);
}

.match-button:hover,
.a-small-button:hover,
.small-button:hover {
  border-color: var(--color-dimgray);
  background: var(--color-darkgray);
}

.logged-out:hover,
.logged-in:hover {
  border: 3px solid var(--color-dimgray);
  background: var(--color-darkgray);
}

.stepper-dec:hover {
  border: 3px solid var(--color-dimgray);
  border-top: 1.5px solid var(--color-lightgray);
  background: var(--color-darkgray);
}

.stepper-inc:hover {
  border: 3px solid var(--color-dimgray);
  border-bottom: 1.5px solid var(--color-lightgray);
  background: var(--color-darkgray);
}

.clean-button {
  cursor: pointer;
  background: var(--color-clear);
  border-color: var(--color-clear);
  margin: 8px;
}

.edit-pp-button {
  cursor: pointer;
  background: var(--color-clear);
  border: 3px solid var(--color-highlightgray);
  width: 132px;
  height: 132px;
  border-radius: 126px;
  display: flex;
  flex-direction: row;
  justify-content: center;
  padding: 0px;
  margin-bottom: 10px;
}

.edit-pp-button:hover .edit-pp-overlay {
  opacity: 1;
}

.edit-pp-button:hover .large-pp {
  opacity: 0.2;
}

a:link {
  text-decoration: none;
}
a:visited {
  text-decoration: none;
}
a:hover {
  text-decoration: none;
}
a:active {
  text-decoration: none;
}

.a-large-button:active,
.large-button:active,
.a-small-button:active,
.small-button:active,
.friend-button:active .field,
.stepper-inc:active .stepper-text-inc,
.stepper-dec:active .stepper-text-dec,
.match-button:active,
.logged-in:active .field,
.logged-out:active .field,
.profile-button:active .field,
.medium-button:active {
  color: var(--color-dimgray);
}

.icon-button:active .icon,
.small-icon:active,
.logged-out:active .login-icon,
.edit-pp-button:active .edit-pp-overlay {
  filter: brightness(0) saturate(100%) invert(44%) sepia(0%) saturate(636%) hue-rotate(180deg) brightness(85%);
}

.large-button-red:active,
.medium-button-red:active {
  color: red;
}

/* INPUT */

.label-field-button {
  height: 38px;
  max-width: 100%;
  background: var(--color-clear);
  border: 3px solid var(--color-lightgray);
  border-radius: var(--br);
  font-family: var(--font);
  font-size: 40px;
  font-weight: var(--font-semibold);
  color: var(--color-white);
  align-items: center;
  justify-content: space-between;
  display: flex;
  margin-top: 42px;
  padding: 13px 9px 13px 32px;
}

.twoFA-input,
.text-field,
.list-field {
  background-color: var(--color-clear);
  border-color: var(--color-clear);
  color: var(--color-white);
  font-family: var(--font);
  margin-right: 13px;
  outline: 0;
}

.text-field {
  width: 100%;
  max-width: 260px;
  max-height: 44px;
  font-size: 40px;
  border-bottom: 1px dashed var(--color-lightgray);
}

.list-field {
  width: 100%;
  font-weight: var(--font-light);
  font-size: 32px;
  outline: 0;
}

.twoFA-input {
  margin-top: 21px;
  width: 100%;
  max-width: 160px;
  max-height: 44px;
  font-size: 40px;
  border-bottom: 1px dashed var(--color-lightgray);
}

.twoFA-input:focus,
.text-field:focus {
  border-bottom: 1px dashed var(--color-white);
}

/* IMAGES */

.icon {
  width: 32px;
  height: 32px;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

.login-icon {
  width: 42px;
  height: 42px;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  margin-left: 8px;
}

.hidden {
  display: none !important;
}

.small-pp {
  display: none;
  width: 42px;
  height: 42px;
  border: 3px solid var(--color-highlightgray);
  border-radius: var(--br);
  margin-right: 17px;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  transition: opacity 0.3s ease;
}

#small-pp.show {
  display: block;
}

#small-profile-pic.show {
    display: block;
}

.large-pp {
  width: 126px;
  height: 126px;
  border: 3px solid var(--color-highlightgray);
  border-radius: 126px;
  padding: 0px;
  margin-top: -3px;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

.user-header {
  display: flex;
  flex-direction: column;
  margin-top: 19.5px;
  justify-content: center;
  align-items: center;
  align-content: center;
}

.medium-text {
  font-size: 27px;
}

.trophy {
  margin-right: 21px;
  height: 25px;
  width: 25px;
}

.large-trophy {
  margin-right: 21px;
  height: 42px;
  width: 42px;
}

.small-icon {
  width: 21px;
  height: 21px;
}

.twoFA-QR {
  width: 210px;
  height: 210px;
  margin: 21px;
  border: 3px solid var(--color-highlightgray);
  border-radius: 21px;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-drag: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  padding: 8px;
}

.edit-pp-overlay {
  opacity: 0;
  height: 32px;
  width: 32px;
  padding: 42px;
  position: absolute;
  top: 100px;
  left: 50%;
  transform: translate(-50%, -50%);
}

/* TEXT */

.title {
  font-size: 64px;
  margin: 0px 32px;
  font-weight: var(--font-semibold);
}

.label {
  white-space: nowrap;
  height: 47px;
  align-items: center;
  display: flex;
  margin-right: 11px;
}

.field {
  font-family: var(--font);
  font-size: 32px;
  font-weight: var(--font-light);
  color: var(--color-white);
  text-align: left;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.subheading {
  width: 100%;
  max-width: 420px;
  font-size: 40px;
  font-weight: var(--font-semibold);
  text-align: center;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.large-text {
  font-size: 40px;
}

.small-text {
  font-size: 20px;
  text-align: left;
  max-width: 528px;
}
/* ... */

